# vulkan-performance-layers

./: .gitmodules  CMakeLists.txt  CREDITS.md  OWNERS.md  README.md
.github/workflows/: check-formatting.yml  check-layers.yml
docker/: build.Dockerfile  test_performance_layers.sh
layer/: CMakeLists.txt  VkLayer_stadia_frame_time.json  VkLayer_stadia_memory_usage.json  VkLayer_stadia_pipeline_cache_sideload.json  VkLayer_stadia_pipeline_compile_time.json  VkLayer_stadia_pipeline_runtime.json  cache_sideload_layer.cc  common_logging.cc  common_logging.h  compile_time_layer.cc  csv_logging.cc  csv_logging.h  debug_logging.cc  event_logging.h  frame_time_layer.cc  input_buffer.cc  input_buffer.h  layer_data.cc  layer_data.h  layer_utils.cc  layer_utils.h  log_output.cc  log_scanner.cc  log_scanner.h  logging.cc  logging.h  memory_usage_layer.cc  runtime_layer.cc  runtime_layer_data.cc  runtime_layer_data.h
layer/cache_sideload/: CMakeLists.txt  VkLayer_stadia_pipeline_cache_sideload.json  cache_sideload_layer.cc
layer/compile_time/: CMakeLists.txt  VkLayer_stadia_pipeline_compile_time.json  compile_time_layer.cc
layer/frame_time/: CMakeLists.txt  frame_time_layer.cc
layer/memory_usage/: CMakeLists.txt  memory_usage_layer.cc
layer/runtime/: CMakeLists.txt  runtime_layer.cc  runtime_layer_data.cc  runtime_layer_data.h
layer/support/: CMakeLists.txt  common_logging.cc  common_logging.h  csv_logging.cc  csv_logging.h  debug_logging.cc  debug_logging.h  event_logging.h  input_buffer.cc  layer_data.cc  layer_data.h  layer_utils.cc  layer_utils.h  log_output.cc  log_output.h  log_scanner.cc  trace_event_logging.cc  trace_event_logging.h
layer/unittest/: CMakeLists.txt  common_log_tests.cc  csv_log_tests.cc  event_log_tests.cc  input_buffer_tests.cc  layer_utils_tests.cc  log_output_tests.cc  log_scanner_tests.cc  trace_event_log_tests.cc
sample_output/: compile_time.csv  frame_time.csv  memory_usage.csv  run_time.csv
scripts/: analyze_frametimes.py  gen_sample_output.sh  plot_frame_times.sh  plot_timeline.py
test/: check_compile_time_log.txt  check_event_log.txt  check_frame_time_log.txt  check_memory_usage_log.txt  check_run_time_log.txt  check_trace_event.txt
units/: common_log_tests.cc  csv_log_tests.cc  event_log_tests.cc  input_buffer_tests.cc  log_output_tests.cc  log_scanner_tests.cc
